# so

./: .clang-format
labs/10/: CMakeLists.txt  overlapped-io.c
labs/10/include/: utils.h
labs/4/so_lab4_rust/: Cargo.toml
labs/4/so_lab4_rust/src/: main.rs
labs/lab01-tasks/: CMakeLists.txt
labs/lab01-tasks/lin/: CMakeLists.txt
labs/lab01-tasks/lin/1-hello/: CMakeLists.txt
labs/lab01-tasks/lin/2-lib/: CMakeLists.txt  Makefile_dynamic  Makefile_static
labs/lab01-tasks/lin/3-ops/: CMakeLists.txt  Makefile  ops.c
labs/lab01-tasks/lin/4-gdb/: CMakeLists.txt  Makefile  fault.c
labs/lab01-tasks/lin/5-linker/: CMakeLists.txt  Makefile  main.c  str.c
labs/lab01-tasks/win/: CMakeLists.txt
labs/lab01-tasks/win/1-hello/: CMakeLists.txt
labs/lab01-tasks/win/2-debug/: CMakeLists.txt  Makefile.dbg  Makefile.ndbg
labs/lab01-tasks/win/3-bounds/: CMakeLists.txt  Makefile.dynamic  Makefile.static  max.c
labs/lab02-tasks/lin/: CMakeLists.txt
labs/lab02-tasks/lin/1-redirect/: CMakeLists.txt  redirect.c
labs/lab02-tasks/lin/2-lseek/: CMakeLists.txt  lseek.c
labs/lab02-tasks/lin/3-mcat/: CMakeLists.txt  mcat.c
labs/lab02-tasks/lin/4-trouble/: CMakeLists.txt  trouble.c
labs/lab02-tasks/lin/5-singular/: CMakeLists.txt  singular.c
labs/lab02-tasks/lin/nasty/: CMakeLists.txt
labs/lab02-tasks/lin/utils/: full_write.c  full_write.h  utils.h
labs/lab02-tasks/win/2-crc/: crc.c
labs/lab11-tasks/lin/: CMakeLists.txt
labs_2013/5/: CMakeLists.txt
labs_2013/5/shm/: CMakeLists.txt  ClientSHM.c  ServerSHM.c
labs_2013/5/win/: CMakeLists.txt
(+40 files in other folders)
